# StoneCold_DefinitiveEdition

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  LICENSE  Makefile  README.md  cmake_install.cmake  index.clang-format  sc.clang-format  tmpformat
config/: sc_assets.json  sc_settings.ini  sc_settings.json  sc_sprites.json
src/: Application.cpp
src/StoneCold.Assets/: AssetManager.cpp  AssetManager.hpp  AssetSpriteAnimated.hpp  AssetSpriteStatic.hpp  AssetTexture.hpp  Assets.hpp  ScAsset.hpp  ScAssetFont.hpp  ScAssetSpriteAnimated.hpp  ScAssetSpriteStatic.hpp  ScAssetTexture.hpp
src/StoneCold.Base/: EntityComponentArray.hpp  EnumHelper.hpp  Exception.cpp  Exception.hpp  SDL_Base.hpp  Settings.hpp  Types.hpp  Vec2.hpp  Vec4.hpp
src/StoneCold.Common/: ApplicationConfig.hpp  ApplicationConfig.hpp.in  Enums.hpp  Exception.cpp  Exception.hpp  Types.hpp
src/StoneCold.Core/: ApplicationConfig.hpp  ApplicationConfig.hpp.in  Enums.hpp  Exception.cpp  Exception.hpp  GameCore.cpp  GameCore.hpp  MapManager.cpp  MapManager.hpp  MapTileHelper.hpp  SfmlManager.cpp  SfmlManager.hpp  Types.hpp
src/StoneCold.ECS/: ComponentMasks.hpp  Components.hpp  EntityComponentArray.hpp  EntityComponentManager.cpp  EntityComponentManager.hpp  EntityComponentSystem.cpp  EntityComponentSystem.hpp  System.hpp  SystemAnimation.hpp  SystemCollisionDetection.hpp  SystemCollisionResolution.hpp  SystemInput.hpp  SystemInputAnimation.hpp  SystemInputTransform.hpp  SystemMotionRender.hpp  SystemStaticRender.hpp
src/StoneCold.Engine/: AnimationSystem.hpp  CollisionDetectionSystem.hpp  CollisionResolutionSystem.hpp  Components.hpp  DecisionTee.cpp  DecisionTee.hpp  EngineCore.cpp  EngineCore.hpp  EntityComponentManager.cpp  EntityComponentManager.hpp  EntityComponentSystem.cpp  EntityComponentSystem.hpp  EntityComponentWorld.hpp  EventManager.hpp  GameState.cpp  GameState.hpp  IntroState.cpp  IntroState.hpp  LayeredRenderSystem.hpp  MenuState.cpp  MenuState.hpp  MotionRenderSystem.hpp  ScreenPositionSystem.hpp  State.hpp  StaticRenderSystem.hpp  System.hpp  TransformationSystem.hpp
src/StoneCold.GUI/: Button.cpp  Button.hpp  Widget.hpp
src/StoneCold.Game/: AiManager.cpp  AiManager.hpp  Application.cpp  GameCore.cpp  GameCore.hpp  MapManager.cpp  MapManager.hpp  SDLManager.cpp  SDLManager.hpp  SimulationManager.cpp  SimulationManager.hpp  StoneCold.Game.vcxproj  StoneCold.Game.vcxproj.filters
src/StoneCold.Resources/: AnimationResource.hpp  Data_AI.hpp  Data_Animations.hpp  Data_External.hpp  Data_Objects.hpp  FontResource.hpp  Resource.hpp  ResourceManager.cpp  ResourceManager.hpp  SettingsManager.cpp  SettingsManager.hpp  TextureResource.hpp
src/StoneCold.Scenes/: GamePlayScene.cpp  GamePlayScene.hpp  MainMenuScene.cpp  MainMenuScene.hpp  Scene.hpp  SceneAction.hpp
